// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders childByIdQuery occurrence snapshot correctly 1`] = `
<div
  className="row"
>
  <InfoItem
    className="label"
    description="Urho Kekkosen katu 12"
    fullWidth={true}
    icon={<Unknown />}
    id="venue"
    key="0"
    label="Musiikkitalo"
  />
  <InfoItem
    className="label"
    icon={<B />}
    id="time"
    key="1"
    label="8.3.2020"
  />
  <InfoItem
    className="label"
    icon={<Unknown />}
    id="duration"
    key="2"
    label="04:00 - 04:12"
  />
  <InfoItem
    className="label"
    icon={<Unknown />}
    id="participants"
    key="3"
    label="Perhe"
  />
</div>
`;

exports[`renders occurrence snapshot correctly 1`] = `
<div
  className="row"
>
  <InfoItem
    className="label"
    fullWidth={true}
    icon={<Unknown />}
    id="venue"
    key="0"
    label="Musiikkitalo"
  />
  <InfoItem
    className="label"
    icon={<B />}
    id="time"
    key="1"
    label="8.3.2020"
  />
  <InfoItem
    className="label"
    icon={<Unknown />}
    id="duration"
    key="2"
    label="04:00 - 04:12"
  />
  <InfoItem
    className="label"
    icon={<Unknown />}
    id="participants"
    key="3"
    label="Perhe"
  />
</div>
`;

exports[`renders snapshot correctly 1`] = `
<Fragment>
  <div
    className="heroWrapper"
    style={
      Object {
        "backgroundImage": "url(\\"a\\")",
      }
    }
    title="b"
  >
    <div
      className="backButtonWrapper"
    >
      <div
        className="backButtonInnerWrapper"
      >
        <Link
          aria-label="Palaa"
          className="backButton"
          to="/back-to"
        >
          <Icon
            className="backButtonIcon"
            src="arrowLeft.svg"
          />
        </Link>
      </div>
    </div>
  </div>
  <PageWrapper
    className="wrapper"
    title="event name"
  >
    <div
      className="eventWrapper"
      role="main"
    >
      <div
        className="event"
      >
        <div
          className="heading"
        >
          <h1>
            event name
          </h1>
        </div>
      </div>
    </div>
  </PageWrapper>
</Fragment>
`;
